# wankel

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  wankel.h
.devcontainer/: devcontainer.json
cmd/: CMakeLists.txt  wankel.c
parser/: CMakeLists.txt  golexer.l  goparser.y  wk_lexer.l  wk_parser.y  wk_state.h  wk_yy_extern.h
